[package]
name = "ical-filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.3"
clap = { version = "4.2.1", features = ["derive"] }
url = "2.3.1"
reqwest = { version = "0.11.16", features = ["blocking"] }
ics = "0.5.8"
[dependencies.ical]
version = "0.8.*"
default-features = false
features = ["ical", "vcard"]
