[package]
name = "ical-filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.3"
clap = { version = "4.2.1", features = ["derive"] }
url = "2.3.1"
reqwest = { version = "0.11.16", features = ["blocking"] }
ics = "0.5.8"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0-rc.2"
itertools = "0.10.5"
anyhow = "1.0.70"

[dependencies.ical]
version = "0.8.*"
default-features = false
features = ["ical", "vcard"]
